Review fix: tighten test assertions and consolidate distribution property
Move requestdistribution=zipfian from all 5 per-workload files into
workload-common.properties to eliminate duplication.

Tighten statistical tolerance bands from +/-10% to +/-3% of expected
proportion (6-sigma safe at 10K samples). Add assertRatio helper.
Add UPDATE ratio assertions for workloads B and W. Load common
properties directly (not merged) in commonPropertiesHaveRequiredFields
to catch accidental shadowing. Add exact-value verification for all
workload proportions. Add proportions-sum-to-1.0 guard. Add
project.properties Maven filtering test. Use Path.of over Paths.get.